# ai-spotlight

./: .gitignore  Readme.md  index.py  package-lock.json  package.json  spotlight_readme.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
