[package]
name = "spotlight-ai"
version = "1.0.0"
description = "AI Spotlight for Windows"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ "window-set-always-on-top", "window-start-dragging", "window-set-size", "window-close", "window-set-focus", "window-unminimize", "window-set-position", "window-show", "window-maximize", "window-unmaximize", "window-hide", "window-minimize", "shell-open", "global-shortcut-all", "system-tray", "global-shortcut"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
