[package]
name = "spotlight-ai"
version = "0.0.0"
description = "AI Spotlight for Windows"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [ 
    "window-set-always-on-top", 
    "window-start-dragging", 
    "window-set-size", 
    "window-close", 
    "window-set-focus", 
    "window-unminimize", 
    "window-set-position", 
    "window-show", 
    "window-maximize", 
    "window-unmaximize", 
    "window-hide", 
    "window-minimize", 
    "window-center",
    "shell-open", 
    "global-shortcut-all", 
    "system-tray", 
    "global-shortcut" 
] }
raw-window-handle = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
